--- a/.github/workflows/update_playlist.yml
+++ b/.github/workflows/update_playlist.yml
@@ -1,4 +1,4 @@
-name: Update FPT Udpxy Playlist
+name: Update fptplay Playlist
 
 on:
   workflow_dispatch:
@@ -22,8 +22,8 @@ jobs:
     - name: Download, Convert and Push
       run: |
         # --- CẤU HÌNH ---
-        SOURCE_URL="https://raw.githubusercontent.com/ntd249/ntdiptv/main/fptudp"
-        OUTPUT_FILE="IPTV/fpt_udpxy.m3u8"
+        SOURCE_URL="https://raw.githubusercontent.com/PTSon1003/IPTV/refs/heads/main/"
+        OUTPUT_FILE="IPTV/fptplay_ss.m3u8"
         UDPXY_PREFIX="http://172.27.1.39:4022/udp/"
 
         # --- XỬ LÝ ---
